# RoyalTracer-DX

./: .gitignore  LICENSE  README.md
Pathtracer/: CMakeLists.txt  README.md  ico.mtl  main.cpp
Pathtracer/include/: Common_v6.hlsl  GGXT.hlsl  Hit_v6.hlsl  Lambertian.hlsl  MIS_GI_v6.hlsl  RayGen_v6_pass1.hlsl  RayGen_v6_pass2.hlsl  RayGen_v6_pass3.hlsl  ShadowRay.hlsl  garage.mtl  monke.mtl
Pathtracer/lib/: tiny_obj_loader.h
Pathtracer/lib/imgui/: imgui_draw.cpp  imgui_impl_win32.cpp  imgui_tables.cpp
Pathtracer/libs/: tiny_gltf.h
Pathtracer/rdn/: DXRHelper.h  DXSample.cpp  DXSample.h  DXSampleHelper.h  Main.cpp  Renderer.cpp  Renderer.h  Win32Application.cpp  manipulator.cpp  manipulator.h
Pathtracer/shaders/: BSDF_Sampling_v7.hlsli  BSDF_v7.hlsli  Camera_ray_v7.hlsli  Common_v7.hlsli  Compression_v7.hlsli  Constants_v7.hlsli  GGX_v7.hlsli  Hit_v7.hlsl  Lambertian_v7.hlsli  MIS_v7.hlsli  Motion_vectors_v7.hlsli  NEE_Sampling_v7.hlsli  NEE_v7.hlsli  Pass_init_di_v7.hlsl  Pass_init_gi_v7.hlsl  Pass_shading_v7.hlsl  Pass_spat_di_v7.hlsl  Pass_spat_gi_v7.hlsl  Pass_temp_di_v7.hlsl  Pass_temp_gi_v7.hlsl  Random_v7.hlsli  Reservoir_DI_v7.hlsli  Sample_data.hlsli  Sample_di_v7.hlsli  Structures_misc.hlsli
Pathtracer/src/: Tutorial2.cpp  Tutorial2.h  main.cpp
Pathtracer/src/Components/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h  Triangle.h  Vertex.cpp  Vertex.h
Pathtracer/src/Math/: Helpers.h  Quaterion.cpp  Quaterion.h  Quaternion.cpp  Quaternion.h  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
Pathtracer/src/Objects/: SceneObject.cpp  SceneObject.h  sceneObject.cpp  sceneObject.h
Pathtracer/src/Primitives/: Triangle.cpp
Pathtracer/src/Renderer/: Renderer.cpp  Renderer.h  renderer.cpp  renderer.h
Pathtracer/src/Renderer/inc/: Application.h  CommandQueue.h  DX12LibPCH.h  Window.h
Pathtracer/src/Renderer/src/: Application.cpp  CommandQueue.cpp  DX12LibPCH.cpp  Game.cpp  HighResolutionClock.cpp  Window.cpp
Pathtracer/src/Scene/: Scene.cpp  Scene.h  scene.cpp  scene.h
Pathtracer/src/Util/: D3DVertex.h  GLFDLoader.h  ObjLoader.h
Pathtracer/src/shaders/: VertexShader.hlsl
